.metadata/.plugins/org.eclipse.cdt.ui/17_TIMER_PWM_MODE.build.log
09:45:48 **** Incremental Build of configuration Debug for project 17_TIMER_PWM_MODE ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:179:13: error: invalid storage class for function 'MX_TIM2_Init'
  179 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:238:13: error: invalid storage class for function 'MX_GPIO_Init'
  238 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:267:1: error: expected declaration or statement at end of input
  267 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_TIM2_Init' used but never defined
   52 | static void MX_TIM2_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:258:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  258 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:238:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  238 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:179:13: warning: 'MX_TIM2_Init' defined but not used [-Wunused-function]
  179 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:135:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  135 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

09:45:49 Build Failed. 4 errors, 6 warnings. (took 1s.602ms)

